--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="greet">
                 <h1 class="font-28px">Hello.. I'am Livin Samuel M R</h1>
-                <h1 class="font-24px"> Masters Data Science student @NITK</h1>
+                <h1 class="font-24px"> Full Stack developer @BrassyTechnologiesK</h1>
             </div>
             <div class="new_nav">
                 <div class="outer">
