--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                         <div>
                             <h3>Graduation</h3>
                         </div>
-                        <p>The National Institute of Engineering, Mysore</p>
-                        <p>Mechanical Engineering Bachelors</p>
+                        <p>Government College of Engineering, Tirunelveli</p>
+                        <p>ECE</p>
                         <div class="grade">
                             <p>CGPA: 8.49/10</p>
                             <div class="year">
